The organizations editor. Allows merging one org into another, and deleting orgs. Note that the changes don't actually take effect until the next time the dashboards are regenerated.

--- a/templates/organizations.tmpl
+++ b/templates/organizations.tmpl
@@ -10,5 +10,6 @@
                 {{/orgs}}
             </tbody>
         </table>
+        <p><a href="organizations-edit.html">[Edit the organizations list]</a></p>
     </section>
 {{> footer.tmpl}}
