--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -514,6 +514,14 @@ div.expanded-graph a.graph-collapse {
   background-image: url(../img/collapse.svg);
 }
 
+div.expanded-graph-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(34,37,41,0.9);
+}
 div.expanded-graph {
   position: fixed;
   top: 50%;
@@ -521,11 +529,12 @@ div.expanded-graph {
   transform: translateX(-50%) translateY(-50%);
   width: 90vw;
   height: 80vh;
-  outline: 2000px solid rgba(0,0,0,0.6);
   z-index: 12;
-  background: black;
+  background: #393e44;
   padding: 2em;
+  box-shadow: 4px 4px 9px rgba(0,0,0,0.5);
   box-sizing: border-box;
+  border-radius: 6px;
 }
 
 /* ==========================================================================
