--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -12,6 +12,7 @@
     <script src="$$BASEURL$$/assets/js/chartjs-plugin-annotation.js"></script>
     <script src="$$BASEURL$$/assets/js/chartjs-plugin-adjustable.js"></script>
     <script src="$$BASEURL$$/assets/js/chartjs-plugin-linkable.js"></script>
+    <script src="$$BASEURL$$/assets/js/chartjs-plugin-background.js"></script>
     <script src="$$BASEURL$$/assets/js/sorttable.js"></script>
     <script src="$$BASEURL$$/assets/js/nodep-date-input-polyfill.dist.js"></script>
     </body>
