First cut of github login. Enable it by adding an authorization section to config.yaml; see config.yaml.example for details.

--- a/templates/orgs.tmpl
+++ b/templates/orgs.tmpl
@@ -1,4 +1,4 @@
-<section class="orgs" data-login="{{login}}">
+<section class="orgs" data-login="{{login}}" data-auth-required>
 <h1>Organizations</h1>
 <ul class="orgsin"></ul>
 <hr>
