--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -547,6 +547,16 @@ div.expanded-graph .chart-container-wrapper {
     position: relative;
 }
 
+section[data-auth-required] a.login-required-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(255,0,0,0.3);
+  text-align: center;
+  width: 100%;
+  height: 24px;
+}
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
