--- a/templates/notes.tmpl
+++ b/templates/notes.tmpl
@@ -1,4 +1,4 @@
-<section class="notes" data-login="{{login}}">
+<section class="notes" data-login="{{login}}" data-auth-required>
 <h1>Notes</h1>
 <button>Add a note</button>
 <ul></ul>
