--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -154,6 +154,25 @@ section button, section input, section select {
   display: block;
 }
 
+.main.report table th {
+  color: white;
+}
+.main.report table th small {
+  font-weight: normal;
+  color: #3b4045;
+  white-space: nowrap;
+}
+.main.report table tr {
+  border-bottom: 1px solid #3b4045;
+}
+.main.report table td {
+  padding: 2px;
+}
+.main.report table tr:nth-child(2n) td {
+  background: rgba(255,255,255,0.05);
+}
+
+
 header.wrapper {
     width: 100%;
     padding: 0 5%;
