--- a/templates/mainlessheader.tmpl
+++ b/templates/mainlessheader.tmpl
@@ -26,6 +26,7 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
+                <a class="search" href="$$BASEURL$$/search.html">🔍</a>
                 <h1 class="title"><a href="$$BASEURL$$/index.html">JP</a></h1>
                 <nav><h2>{{subtitle}}</h2></nav>
                 <nav>
