PRs accepted and rejected big number (and link for contributors). Closes #8

--- a/templates/bignumber.tmpl
+++ b/templates/bignumber.tmpl
@@ -2,5 +2,5 @@
 <h1>{{title}}</h1>
 <big>{{bignumber}}</big>
 <p>{{unit}} {{#link}}<a href="{{link}}"> </a>{{/link}}</p>
-<small>{{changename}}: <strong>{{changeamount}}</strong></small>
+{{#changename}}<small>{{changename}}: <strong>{{changeamount}}</strong></small>{{/changename}}
 </section>
