Add titles to zoomed graphs. INclude title of graph itself, even though it's in the header above, so that the image of the graph itself (from context-menu Save Image) is self-contained (closes #55)

--- a/templates/mainlessheader.tmpl
+++ b/templates/mainlessheader.tmpl
@@ -28,7 +28,7 @@
             <header class="wrapper clearfix">
                 <a class="search" href="$$BASEURL$$/search.html">🔍</a>
                 <h1 class="title"><a href="$$BASEURL$$/index.html">JP</a></h1>
-                <nav><h2>{{subtitle}}</h2></nav>
+                <nav><h2 data-dashboard-type="{{type}}">{{subtitle}}</h2></nav>
                 <nav>
                     <ul>
                         <li><a class="nav-overview{{#isOverview}} highlight{{/isOverview}}" href="$$BASEURL$$/index.html"><span>Overview</span></a></li>
