--- a/templates/bignumberstats.tmpl
+++ b/templates/bignumberstats.tmpl
@@ -7,5 +7,5 @@
     <dt>median</dt><dd>{{median}}</dd>
     <dt>95th percentile</dt><dd>{{pc95}}</dd>
 </dl>
-<p><small>{{changename}}: <strong>{{changeamount}}</strong></small></p>
+{{#changename}}<p><small>{{changename}}: <strong>{{changeamount}}</strong></small></p>{{/changename}}
 </section>
