Add a debug-queries block when in debug mode, so we can see the queries that were run to create this dashboard

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -398,7 +398,6 @@ section.bignumber {
     text-align: center;
 }
 section.bignumber big {
-    font-size: 400%;
     color: white;
     font-weight: 100;
     margin: 0.3em 0;
@@ -444,6 +443,18 @@ table.repolist th, table.repolist td {
 }
 table.repolist th {
   border-top: 1px solid rgba(255,255,255,0.1);
+}
+
+article[data-widget="debug-queries"] ul, article[data-widget="debug-queries"] li {
+  margin: 0;
+  padding: 0;
+}
+article[data-widget="debug-queries"] li {
+  list-style: none;
+  font-family: monospace;
+  font-size: 8px;
+  line-height: 1.2;
+  margin-bottom: 2px;
 }
 
 #flash_messages {
