Add widget name (which may not be wholly reliable) to each query in debug-queries widget

--- a/templates/dashboard.tmpl
+++ b/templates/dashboard.tmpl
@@ -14,7 +14,7 @@
 <h1>Debug: Queries</h1>
 <ul>
     {{#executedQueries}}
-        <li>{{q}}</li>
+        <li><strong>{{widget_name}}</strong> {{collection}}:{{args}}</li>
     {{/executedQueries}}
 </ul>
 </section>
