--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -4,7 +4,7 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>Measure 2017-date</h3>
+                <h3>Measure 2017-2018</h3>
             </footer>
         </div>
     <script>var BASE_API_URL = "$$BASEURL$$/api.php";</script>
