--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -226,9 +226,15 @@ h1.title {
 }
 header a.search {
     float: right;
-    margin-right: 50px;
-    font-size: 1.5em;
-    line-height: 50px;
+    margin-right: 30px;
+    width: 25px;
+    height: 25px;
+    text-indent: -1000px;
+    overflow: hidden;
+    display: inline-block;
+    background: url(../img/search.svg) no-repeat;
+    background-size: contain;
+    margin-top: 1.3em;
 }
 nav + nav {
     background-color: #3b4045;
@@ -360,6 +366,9 @@ https://thenounproject.com/term/company-organization/748326
 https://thenounproject.com/term/dashboard/1237026
 https://thenounproject.com/term/statistics/789906
 https://thenounproject.com/latyshevaoksana/collection/vending-machine/?i=880796
+https://thenounproject.com/search/?q=error&i=560230
+https://thenounproject.com/search/?q=search&i=591162
+https://thenounproject.com/search/?q=close&i=392991
 */
 nav + nav li a.nav-repos::before { background-image: url(../img/Dashboards.svg); height: 18px; width: 18px; }
 nav + nav li a.nav-orgs::before { background-image: url(../img/Groups.svg); }
@@ -463,40 +472,52 @@ article[data-widget="debug-queries"] li {
     left: 5%;
     right: 5%;
     z-index: 2;
-    pointer-events: none;
 }
 
 #flash_messages button {
     border-width: 0;
     background: transparent;
-    color: #ff7;
+    color: white;
     position: absolute;
     right: 0;
     top: 0;
+    width: 25px;
+    height: 25px;
+    text-indent: -100px;
+    background: url(../img/error-white.svg) no-repeat;
+    background-size: contain;
+    overflow: hidden;
 }
 
-#flash_messages p {
-    opacity: 0;
-    transform: scale(0.05);
-    transform-origin: 100% 0;
-    transition: all 250ms ease-out;
-    border-radius: 12px;
-    width: 100%;
+#flash_messages ul.displaying {
+    pointer-events: none;
+    position: absolute;
+    width: 80%;
+    top: 40px;
+    left: 10%;
     margin: 0;
+    padding: 0;
+}
+#flash_messages ul.displaying li {
+    transition: all 250ms ease-out;
+    width: 100%;
+    margin: 0.5em 0;
     box-sizing: border-box;
     min-height: 4em;
-}
-
-#flash_messages p.showing {
-    background: #ff7;
+    background-color: #dddddd;
     color: black;
-    margin: auto;
-    padding: 1em;
-    opacity: 0.8;
-    transform: scale(1);
+    border-radius: 4px;
+    box-shadow: 2px 2px 3px #dddddd;
+    list-style: none;
+    padding: 0.5em 0.5em 0.5em 5em;
+    /* Error by Vaibhav Radhakrishnan from the Noun Project */
+    background-image: url(../img/error.svg);
+    background-size: 4em 4em;
+    background-repeat: no-repeat;
+    background-position: 0.5em 0.5em;
 }
 
-#flash_messages ul {
+#flash_messages ul.remembered {
     position: absolute;
     width: 100%;
     top: 0;
@@ -507,9 +528,30 @@ article[data-widget="debug-queries"] li {
     color: black;
     display: none;
     max-height: 50vh;
-    overflow-y: auto;
-    overflow-x: hidden;
+    padding: 0;
+    box-sizing: border-box;
 }
+#flash_messages ul.remembered li {
+    padding: 0.2em 1em;
+    margin: 0.2em 0;
+    list-style: none;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+#flash_messages ul.remembered::after {
+    position: absolute;
+    display: block;
+    content: "×";
+    width: 35px;
+    height: 35px;
+    top: -20px;
+    right: -20px;
+    text-indent: -1000em;
+    background: #808080 url(../img/close.svg) center center no-repeat;
+    background-size: 20px 20px;
+    border-radius: 100px;
+    border: 4px solid white;
+}
+
 
 article a[href^="https://github.com"]::before {
    content: "⬀ ";
@@ -638,6 +680,19 @@ section[data-auth-required] a.login-required-link {
   text-align: center;
   width: 100%;
   height: 24px;
+}
+
+@media only screen and (min-width: 800px) {
+  header a.search {
+      margin-right: 60px;
+      width: 45px;
+      height: 45px;
+      margin-top: 1.3em;
+  }
+  #flash_messages button {
+      width: 50px;
+      height: 50px;
+  }
 }
 
 /* ==========================================================================
