--- a/templates/fromto.tmpl
+++ b/templates/fromto.tmpl
@@ -1,6 +1,5 @@
 <section class="fromto">
-<h1>{{from_title}}</h1>
-<big>{{from}}</big>
-<h2>{{to_title}}</h2>
-<big>{{to}}</big>
+<h1>{{title}}</h1>
+<p>{{from_title}}: <strong>{{from}}</strong></p>
+<p>{{to_title}}: <strong>{{to}}</strong></p>
 </section>
