--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -5,6 +5,7 @@
         <div class="footer-container">
             <footer class="wrapper">
                 <h3>Measure 2017-2018</h3>
+                <small>Page generated {{gen}}</small>
             </footer>
         </div>
     <script>var BASE_API_URL = "$$BASEURL$$/api.php";</script>
